# fawkes

./: .gitignore  CLAUDE.md  LICENSE  README.md  RTSPStreamApp.py  example_cv.py  fawkes.spec  main.py  pyproject.toml  requirements.txt  rtc_main.py  signaling_server.py
browser/: basic_sec_interceptor.py  browser.py
detection/: face_detection.py
fawkes/: __init__.py  face_detection.py  main.py  mask_editor.py  mask_renderer.py  rtsp.py
fawkes/assets/masks/: mask_config.json
file_share/: file_share.py
style/: dark_style.qss  light_style.qss  style.qss
utils/: constants.py
utils/thread/: video_stream_thread.py
utils/ui/: message_box.py  notification_center.py
videochat/: videochat.py
videochat2/: videochat2.py
