[project]
name = "fawkes"
version = "0.1.0"
description = "Privacy-preserving video communication using face mesh"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "opencv-python>=4.11.0",
    "mediapipe>=0.10.20",
    "numpy>=1.26.4",
    "PyQt6>=6.8.1",
    "sounddevice>=0.5.1",
]

[project.scripts]
fawkes = "fawkes.main:main"
fawkes-rtsp = "fawkes.rtsp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fawkes"]
